poonam-sre-bootcamp

--- a/auth_api/python/Dockerfile
+++ b/auth_api/python/Dockerfile
@@ -1,4 +1,6 @@
-FROM python:3-alpine
-
-# Add your instructions to dockerize the application
+FROM python:3.9-alpine
+WORKDIR /app
+COPY . .
+RUN pip install -r requirements.txt
 # App must run on port 8000
+ENTRYPOINT [ "gunicorn","-b", "0.0.0.0:8000", "api:app"]
